@@ -16,7 +16,7 @@
 </p>
 
 
-<h2>Download LilyPond 2.4</h2>
+<h2>Download LilyPond 2.4 -- stable branch</h2>
 
 
 <strong>Note</strong> <a name="ec-fonts"></a>
@@ -40,7 +40,7 @@ LilyPond 2.4 requires the <tt>ec-fonts-mftraced</tt> package from
 
 </table>
 
-<h2>Download LilyPond 2.5</h2>
+<h2>Download LilyPond 2.5 -- development branch</h2>
 
 <strong>Note</strong> <a name="gs815"></a>
 LilyPond 2.5 requires version 8.15 or newer of <a
@@ -64,7 +64,7 @@ href="http://www.cups.org/articles.php?L236">Ghostscript</a>.
 </table>
 
 
-<h2>Download LilyPond 2.2</h2>
+<h2>Download LilyPond 2.2 -- old branch</h2>
 
 <a name="2.2"></a>
 <table width="100%" border="0" rules="rows" cellpadding="3">
